client/home/components/home.scss
.HomeContainer {
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  transition: padding .25s ease;
}

/***** Recent Notes Styling *****/

.recentNotes {
  .noteList {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
  }
}
.recentNotes__header {
  display: flex;
  align-items: center;
  margin-bottom: 16px;
}
.recentNotes__header .sectionLabel {
  margin-right: 24px;
  text-transform: uppercase;
  font-size: 1.5rem;
}
.recentNotes__header .allBtn,
.recentNotes__header .newBtn {
  display: flex;
  align-items: center;
  transition: all .25s ease;
  cursor: pointer;
  > i { font-size: 16px; }
}
.recentNotes__header .allBtn {
  > * {
    color: $color-grey;
    transition: color .25s ease;
  }
  &:hover > * { color: darken($color-grey, 25%); }
}
.recentNotes__header .newBtn {
  padding: 4px 8px;
  background: $primary-color-3;
  border-radius: 4px;
  text-transform: uppercase;
  > * { color: white; }
  &:hover { background: lighten($primary-color-3, 5%); }
}

/***** Folders Styling *****/

.folders {
  margin-top: 32px;
  display: flex;
  flex-flow: column nowrap;
}
.folders__header { @extend .recentNotes__header; }

/***** Cards Styling *****/

.noteCard {
  margin: 12px 1%;
  padding: 8px 16px;
  height: 80px;
  max-width: 23%;
  min-width: 230px;
  border: 1px solid $color-grey-lighter;
  border-radius: 8px;
  display: flex;
  flex: 1 0 230px;
  align-items: center;

  &:hover {
    box-shadow: 0 2px 6px $color-grey-lighter;
  }

  .cardImage {
    margin-right: 16px;
  }
  .cardInfo {
    overflow: hidden;
  }
  .cardInfo > .title {
    font-size: 18px;
    color: $primary-color;
    @include overflow-ellipsis();
  }
  .cardInfo > .details {
    font-size: 12px;
    color: $color-grey;
  }
  .cardActions {}
}
.folderCard {
  @extend .noteCard;
  max-width: 100%;
  margin-left: 0;
  margin-right: 0;
  padding: 8px 24px;

  .cardImage > i {
    color: $color-grey-lighter;
    font-size: 32px;
  }
  .cardActions > .icon-btn {
    display: flex;
  }
  .cardActions > .icon-btn i { color: $color-grey-darkest; }
}

/***** Responsive Adjustments *****/

@media (max-width: $screen-sm-max) {
  .HomeContainer { padding: 90px 20px 50px 20px; }
  .recentNotes .noteCard {
    max-width: 100%;
    &:nth-child(n+5) { display: none; }
  }
}
@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
  .HomeContainer { padding: 90px 50px 50px 50px; }
  .recentNotes .noteCard {
    &:nth-child(n+7) { display: none; }
  }
}
@media (min-width: $screen-lg-min) {
  .HomeContainer { padding: 90px 200px 50px 200px; }
  .recentNotes .noteCard {
    &:nth-child(n+9) { display: none; }
  }
}

